fix: [pd-1298] fix for spacing and grid image only shown if image url is present

--- a/src/component/MobileMegaMenu/MegaMenuCategories/Components/MegaMenuBannerSlider/MegaMenuBannerSlider.style.scss
+++ b/src/component/MobileMegaMenu/MegaMenuCategories/Components/MegaMenuBannerSlider/MegaMenuBannerSlider.style.scss
@@ -3,7 +3,7 @@
         &-Image {
             max-height: 157px;
             object-fit: cover;
-            margin-top: 5px;
+            margin-bottom: 5px;
             @include mobile {
                 max-width: 100%;
             }
