--- a/src/component/MobileMegaMenu/MegaMenuCategories/Components/MegaMenuCategoriesAccordian/MegaMenuCategoriesAccordian.style.scss
+++ b/src/component/MobileMegaMenu/MegaMenuCategories/Components/MegaMenuCategoriesAccordian/MegaMenuCategoriesAccordian.style.scss
@@ -1,7 +1,6 @@
 .megamenu-categories-accordian-container {
     width: 100%;
     background: #FFFFFF;
-    margin-top: 5px;
 
     .megaMenuCategoryList {
         height: 110px;
